[workspace]
members = ["rufs", "fuse-ufs", "fuzz"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.83"
bincode = "2.0.0-rc.3"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
env_logger = { version = "0.11.3", default-features = false, features = ["auto-color", "humantime"] }
fuse2rs = "0.0.2"
fuser = "0.14.0"
libc = "0.2.155"
log = "0.4.22"

# Dev dependencies
assert_cmd = "2.0"
cfg-if = "1.0"
cstr = "0.2.12"
lazy_static = "1.4.0"
nix = { version = "0.28.0", features = ["fs", "dir"] }
rstest = { version = "0.19.0", default-features = false }
rstest_reuse = "0.7.0"
tempfile = "3.0"
xattr = "1.3.1"

# Fuzz dependencies
libfuzzer-sys = "0.4"
