[workspace]
members = [
	"rufs",
	"fuse-ufs",
	"fuzz",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.83"
bincode = "2.0.1"
cfg-if = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
daemonize = "0.5.0"
env_logger = { version = "0.11.3", default-features = false, features = ["auto-color", "humantime"] }
fuse2rs = "0.1.2"
# Technically the libfuse dependency is only needed on FreeBSD,
# but because of https://github.com/rust-lang/cargo/issues/1197
# we're forced to also take the dependency on Linux.
fuser = { version = "0.16.0", features = [ "libfuse" ] }
libc = "0.2.176"
log = "0.4.22"
rufs = { version = "0.6.0", path = "rufs" }

# Dev dependencies
assert_cmd = "2.0"
lazy_static = "1.4.0"
nix = { version = "0.28.0", features = ["fs", "dir"] }
rstest = { version = "0.19.0", default-features = false }
rstest_reuse = "0.7.0"
tempfile = "3.0"
xattr = "=1.5.1"
rand = "0.9.0"

# Fuzz dependencies
libfuzzer-sys = "0.4"
