[package]
name = "fuse-ufs"
version = "0.3.0"
edition = "2021"
license = "BSD-2-Clause"
authors = ["Benjamin Stürz <benni@stuerz.xyz>", "Alan Somers <asomers@gmail.com>", "Davids Paskevics <davids.paskevics@gmail.com>"]
description = "FUSE implementation of FreeBSD's UFSv2"
repository = "https://github.com/realchonk/fuse-ufs"
rust-version = "1.74.0"
documentation = "https://docs.rs/fuse-ufs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
env_logger.workspace = true
fuser.workspace = true
libc.workspace = true
log.workspace = true
rufs = { path = "../rufs", features = ["fuser"] }

[dev-dependencies]
assert_cmd.workspace = true
cfg-if.workspace = true
cstr.workspace = true
lazy_static.workspace = true
nix = { workspace = true, features = ["fs", "dir"] }
rstest = { workspace = true, default-features = false }
rstest_reuse.workspace = true
tempfile.workspace = true
xattr.workspace = true
